<resources>
    <string name="app_name">StreetHistory</string>
    <string name="eiffel_tower_paris">Eiffel Tower (Paris)</string>
    <string name="home">Home</string>
    <string name="map">Map</string>
    <string name="settings">Settings</string>
    <string name="street">STREET</string>
    <string name="history">HISTORY</string>
    <string name="historyTab">History</string>
    <string name="reviewsTab">Reviews</string>
    <string name="contactTab">Contact</string>
    <string name="historyDesc">Historical description…</string>
    <string name="image_of_the_place">Image of the place</string>
    <string name="loading_historical_description">Loading historical description</string>
    <string name="loading_image">Loading Image</string>
    <string name="name_of_the_place">Name of the place</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="ok">OK</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="loading_reviews">Loading Reviews</string>
    <string name="star">star</string>
    <string name="historical_description">Historical Description</string>
    <string name="information">Information</string>
    <string name="loading_contact_information">Loading contact information…</string>
    <string name="preferences">Preferences</string>
    <string name="map_style">Map Style</string>
    <string name="map_style_standard">Map Style Standard</string>
    <string name="map_style_retro">Map Style Retro</string>
    <string name="standard">standard</string>
    <string name="retro">retro</string>
    <string name="aubergine">aubergine</string>
    <string name="night">night</string>
    <string name="map_style_night">Map Style Night</string>
    <string name="map_style_aubergine">Map Style Aubergine</string>
    <string name="modify_desc_icon">Modify Desc Icon</string>
    <string name="modify_historical_description">Modify Historical Description</string>
</resources>
