<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frag_home" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/eiffel"
        android:scaleType = "centerCrop"
        android:contentDescription="@string/eiffel_tower_paris"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/street"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/street"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="@string/history"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp" />

</RelativeLayout>