<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/popupBackground">

    <TextView
        android:id="@+id/textViewNamePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_the_place"
        android:labelFor="@+id/editNamePlace" />

    <EditText
        android:id="@+id/editNamePlace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="10dp"
        android:gravity="center"
        android:inputType="text"/>

    <TextView
        android:id="@+id/textViewDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name_of_the_place"
        android:labelFor="@+id/editDesc"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="300dp"
        android:gravity="center"
        android:inputType="text"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"/>

</LinearLayout>