<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rlDescFirst" >

                <ImageView
                    android:id="@+id/descImg"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_of_the_place" />

                <ProgressBar
                    android:id="@+id/progressBarDescImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:indeterminateDrawable="@drawable/customprogressbar"/>

                <TextView
                    android:id="@+id/loadingDescImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="80dp"
                    android:textColor="@color/gray"
                    android:layout_below="@+id/progressBarDescImg"
                    android:text="@string/loading_image" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/rlDescFirst"
                android:id="@+id/relativeLayout"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/historicalDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/historical_description"
                    android:textColor="@color/tab_checked"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="invisible" />

                <WebView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="25dp"
                    android:layout_below="@+id/historicalDescription"
                    android:id="@+id/descWeb"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_centerInParent="true"/>

                <ProgressBar
                    android:id="@+id/progressBarDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="120dp"
                    android:visibility="visible"
                    android:indeterminateDrawable="@drawable/customprogressbar"/>

                <TextView
                    android:id="@+id/loadingDesc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/gray"
                    android:text="@string/loading_historical_description"
                    android:layout_below="@+id/progressBarDesc"
                    android:layout_alignParentStart="true" />

            </RelativeLayout>
        </RelativeLayout>
     </ScrollView>
</RelativeLayout>