<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rlReviewsFirst" >

                <ImageView
                    android:id="@+id/reviewsImg"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/image_of_the_place" />

                <ProgressBar
                    android:id="@+id/progressBarReviewsImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="visible"
                    android:indeterminateDrawable="@drawable/customprogressbar"/>

                <TextView
                    android:id="@+id/loadingReviewsImg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_marginTop="80dp"
                    android:textColor="@color/gray"
                    android:layout_below="@+id/progressBarReviewsImg"
                    android:text="@string/loading_image" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rlReviewsFirst"
                android:visibility="visible"
                android:layout_marginBottom="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/rlVS1"
                    android:layout_marginBottom="10dp">

                    <ViewStub
                        android:id="@+id/viewStub1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout="@layout/comment"
                        android:minHeight="25dp"
                        android:visibility="visible" />

                </RelativeLayout>

                <View
                    android:id="@+id/line1"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_above="@+id/rlVS2"
                    android:layout_marginEnd="80dp"
                    android:layout_marginStart="80dp"
                    android:background="@color/tab_disable"
                    android:visibility="invisible" />

                <RelativeLayout
                    android:id="@+id/rlVS2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/rlVS1"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp">

                    <ViewStub
                        android:id="@+id/viewStub2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout="@layout/comment"
                        android:minHeight="25dp"
                        android:visibility="visible" />

                </RelativeLayout>

                <View
                    android:id="@+id/line2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_above="@+id/rlVS3"
                    android:layout_marginEnd="80dp"
                    android:layout_marginStart="80dp"
                    android:background="@color/tab_disable"
                    android:visibility="invisible" />

                <RelativeLayout
                    android:id="@+id/rlVS3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/rlVS2"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="30dp">

                    <ViewStub
                        android:id="@+id/viewStub3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout="@layout/comment"
                        android:minHeight="25dp"
                        android:visibility="visible" />

                </RelativeLayout>

                <ProgressBar
                    android:id="@+id/progressBarReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:indeterminateDrawable="@drawable/customprogressbar"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/loadingReviews"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/progressBarReviews"
                    android:layout_marginTop="25dp"
                    android:gravity="center"
                    android:text="@string/loading_reviews"
                    android:textColor="@color/gray" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>